--- a/sections/add_new_customer.html
+++ b/sections/add_new_customer.html
@@ -47,7 +47,7 @@
 
 <!-- horizontal line -->
 <div class="col col-md-12">
-  <hr class="col-md-12 float-left" style="padding: 0px; width: 95%; border-top: 2px solid  #02b6ff;">
+  <hr class="col-md-12 float-left" style="padding: 0px; width: 95%; border-top: 2px solid  #AC3E31;">
 </div>
 
 <!-- form submit button -->
