--- a/sections/add_new_supplier.html
+++ b/sections/add_new_supplier.html
@@ -37,7 +37,7 @@
 <!-- supplier details content end -->
 
 <div class="col col-md-12">
-  <hr class="col-md-12 float-left" style="padding: 0px; width: 95%; border-top: 2px solid  #02b6ff;">
+  <hr class="col-md-12 float-left" style="padding: 0px; width: 95%; border-top: 2px solid  #AC3E31;">
 </div>
 
 <!-- new user button -->
