--- a/sections/sidenav.html
+++ b/sections/sidenav.html
@@ -46,8 +46,11 @@
   <div class="card">
     <div class="card-body">
       <div class="logo">
-        <h1 class="logo-caption">Admin</h1>
-      </div> <!-- logo class -->
+        <a href="home.php" class="logo-link">
+          <h1 class="logo-caption">BOOST PHARMACY</h1>
+        </a>
+      </div>
+      <!-- logo class -->
 
       <!-- dashboard start -->
       <div class="main-menu-item">
