--- a/sections/add_new_customer.html
+++ b/sections/add_new_customer.html
@@ -17,7 +17,7 @@
   </div>
 </div>
 
-<!-- customer address control
+<!-- customer address control -->
 <div class="row col col-md-12">
   <div class="col col-md-12 form-group">
     <label class="font-weight-bold" for="customer_address">Address :</label>
@@ -33,7 +33,7 @@
     <input type="text" class="form-control" placeholder="Doctor's Name" id="customer_doctors_name" onkeyup="validateName(this.value, 'doctor_name_error');">
     <code class="text-danger small font-weight-bold float-right" id="doctor_name_error" style="display: none;"></code>
   </div>
-</div> -->
+</div> 
 
 <!-- customes's doctor name -->
 <div class="row col col-md-12">
